--- a/pom.xml
+++ b/pom.xml
@@ -48,16 +48,16 @@
     
     <plugins>
     	<plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>cobertura-maven-plugin</artifactId>
-            <version>2.6</version>
-            <configuration>
-                <formats>
-                    <format>html</format>
-                    <format>xml</format>
-                </formats>
-            </configuration>
-        </plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.6</version>
+    <configuration>
+        <format>xml</format>
+        <maxmem>256m</maxmem>
+        <!-- aggregated reports for multi-module projects -->
+        <aggregate>true</aggregate>
+    </configuration>
+</plugin>
 		
 	<plugin>
     <groupId>org.eluder.coveralls</groupId>
